--- a/news/2020.md
+++ b/news/2020.md
@@ -5,9 +5,10 @@ subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">I presented my recent work about extreme snow-related events at the <a href="https://theicnet.org/">Infrastructure & Climate Network (ICNet)</a> Global Graduate and Student network webinar on 16th October! I was invited by the ICNet Global Graduate and Student network leadership as a first presenter at the new ICNet webinar series. The presentation title is <b><i>"Design Extreme Snowpack and Snowmelt for Infrastructure Design over the U.S.". </i></b> In this talk, I discussed about current and future extreme snowpack and snowmelt (with rain-on-snow events) over the North America. If you would like to see the full presentation, click <a href="https://drive.google.com/file/d/1rU1wmFiOT1Ddt2UZAEkesJSIOrx2Zo3F/view?usp=sharing"><b>here</b></a>. The Infrastructure & Climate Network (ICNet) is a network of over 60 academics, students, and practitioners who are dedicated to accelerating climate science and engineering research in the Northeastern United States. The ICNet focuses on climate change and sea level rise impacts and adaptation for sustainable bridges, roads, and transportation networks. The ICNet was established in October 2012 with support from the National Science Foundation (NSF). Thanks again the ICNet Global Student leadership! Feel free to reach out to me if you have any questions/feedback. </span> 
+<span style="font-size: 18px !important; color: #07153D;">I presented my recent work about extreme snow-related events at the <a href="https://theicnet.org/">Infrastructure & Climate Network (ICNet)</a> Global Graduate and Student network webinar on 16th October! I was invited by the ICNet Global Graduate and Student network leadership as a first presenter at the new ICNet webinar series. The presentation title is <b><i>"Design Extreme Snowpack and Snowmelt for Infrastructure Design over the U.S.". </i></b> In this talk, I discussed about current and future extreme snowpack and snowmelt (with rain-on-snow events) over the North America. If you would like to see the full presentation, click <a href="https://drive.google.com/file/d/1gp9a22pPxf4ZsnOSv4fwtkAx0r8YcaYq/view?usp=sharing"><b>here</b></a>. The Infrastructure & Climate Network (ICNet) is a network of over 60 academics, students, and practitioners who are dedicated to accelerating climate science and engineering research in the Northeastern United States. The ICNet focuses on climate change and sea level rise impacts and adaptation for sustainable bridges, roads, and transportation networks with support from the National Science Foundation (NSF). Thanks again the ICNet Global Student leadership! Feel free to reach out to me if you have any questions/feedback. </span> 
 
 <img src="/news/images/Presentation_ICNet_cover.JPG" width="600" align="center" hspace="20" />
+<img src="/news/images/Presentation_ICNet_cover_FLYER.JPG" width="600" align="center" hspace="20" />
 <br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2020 </span>
