--- a/news/2020.md
+++ b/news/2020.md
@@ -3,6 +3,15 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Dec 2020 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">Arrived an unexpected present! I'm so honored that my recent WRR paper is being recognized as a recipient of the 2019 WRR Editors' Choice Award! I've heard this news from Dr. Martyn Clark, Editor-in-Chief of Water Resources Research, that "Please accept my hearty congratulations on behalf of the editors of WRR. Your work was highlighted at the Hydrology Section business meeting at the AGU Fall meeting this week!" 
+ 
+Starting in 2011 Water Resources Research has instituted the Editor's Choice Awards. Editors’ Choice Award are given to about 1% of published articles in any calendar year to provide professional recognition to scientists for their outstanding work. The selection is made by the Editors of WRR based on technical significance, novelty, originality, presentation, and broader implications of the publication. </span> 
+
+<img src="/img/WRR_2019_EditorsChoiceAward_copy.jpg" width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2020 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">I presented my recent work about extreme snow-related events at the <a href="https://theicnet.org/">Infrastructure & Climate Network (ICNet)</a> Global Graduate and Student network webinar on 16th October! I was invited by the ICNet Global Graduate and Student network leadership as a first presenter for the 2020 ICNet webinar series. The presentation title is <b><i>"Design Extreme Snowpack and Snowmelt for Infrastructure Design over the U.S.". </i></b> In this talk, I discussed about current and future extreme snowpack and snowmelt (with rain-on-snow events) over the North America. If you would like to see the full presentation, click <a href="https://drive.google.com/file/d/1gp9a22pPxf4ZsnOSv4fwtkAx0r8YcaYq/view?usp=sharing"><b>here</b></a>. The Infrastructure & Climate Network (ICNet) is a network of over 60 academics, students, and practitioners who are dedicated to accelerating climate science and engineering research in the Northeastern United States. The ICNet focuses on climate change and sea level rise impacts and adaptation for sustainable bridges, roads, and transportation networks with support from the National Science Foundation (NSF). Thanks again the ICNet Global Student leadership! Feel free to reach out to me if you have any questions/feedback. </span> 
