--- a/news/2020.md
+++ b/news/2020.md
@@ -5,7 +5,7 @@ subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Dec 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">Arrived an unexpected present! I'm so honored that my recent WRR paper is being recognized as a recipient of the <b>2019 WRR Editors' Choice Award</b>! I've heard this news from Dr. Martyn Clark, Editor-in-Chief of Water Resources Research, that "Please accept my hearty congratulations on behalf of the editors of WRR. Your work was highlighted at the Hydrology Section business meeting at the 2020 AGU Fall meeting this week!"</span>
+<span style="font-size: 18px !important; color: #07153D;">I'm so honored that my recent WRR paper is being recognized as a recipient of the <b>2019 WRR Editors' Choice Award</b>! I've heard this news from Dr. Martyn Clark, Editor-in-Chief of Water Resources Research, that "Please accept my hearty congratulations on behalf of the editors of WRR. Your work was highlighted at the Hydrology Section business meeting at the 2020 AGU Fall meeting this week!"</span>
  
 <i>Starting in 2011 Water Resources Research has instituted the Editor's Choice Awards. Editors’ Choice Award are given to about 1% of published articles in any calendar year to provide professional recognition to scientists for their outstanding work. The selection is made by the Editors of WRR based on technical significance, novelty, originality, presentation, and broader implications of the publication.</i>
 
