--- a/news/2020.md
+++ b/news/2020.md
@@ -3,6 +3,13 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Jun 2020 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs presented our snow extreme work at <b><a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a></b>! The NH Climate Summit took place on the afternoon of Wednesday, May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners.</span> Check out the full slide <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>here</b></a>, and watch the presentation video <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>here</b></a> (from 2:28:20, Day2) </span>
+
+<img src="/img/ClimateSummit_Jacobs.jpg" width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Dec 2020 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">I'm so honored that my recent WRR paper is being recognized as a recipient of the <b>2019 WRR Editors' Choice Award</b>! I've heard this news from Dr. Martyn Clark, Editor-in-Chief of Water Resources Research, that "Please accept my hearty congratulations on behalf of the editors of WRR. Your work was highlighted at the Hydrology Section business meeting at the 2020 AGU Fall meeting this week!"</span>
