--- a/news/2020.md
+++ b/news/2020.md
@@ -5,7 +5,7 @@ subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Jun 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs presented our snow extreme work at <b><a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a></b>! The NH Climate Summit took place on the afternoon of Wednesday, May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners.</span> Check out the full slide <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>here</b></a>, and see the presentation <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>video</b></a> from Day2 2:28:28. </span>
+<span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs presented our snow extreme work at <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a>! The NH Climate Summit took place on the afternoon of Wednesday, May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners. Check out the <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>full slide</b></a>, and see the presentation <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>video</b></a> from Day2 2:28:28. </span>
 
 <img src="/img/ClimateSummit_Jacobs.JPG" width="600" align="center" hspace="20" />
 <br>
