--- a/news/2020.md
+++ b/news/2020.md
@@ -3,9 +3,9 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
-<span style="font-size: 15px !important; color: #BD0026;">Jun 2020 </span>
+<span style="font-size: 15px !important; color: #BD0026;">mAY 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs presented our snow extreme work at <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a>! The NH Climate Summit took place on the afternoon of Wednesday, May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners. Check out the <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>full slide</b></a>, and see the presentation <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>video</b></a> from Day2 2:28:28. </span>
+<span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs presented our snow extreme work at <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a>! The NH Climate Summit took place on May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners. Check out the <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>full slide</b></a>, and see the presentation <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>video</b></a> from Day2 2:28:28. </span>
 
 <img src="/img/ClimateSummit_Jacobs.JPG" width="600" align="center" hspace="20" />
 <br>
@@ -39,10 +39,9 @@ subtitle: What is happening?
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">I presented my Sierra Nevada snowpack work at the <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sepember, 2020! I also served as a moderator of the Prairie snow group for the breakout discussion. It was great time to hear and discuss various opinions and thoughts about the gaps/opportunities for prairie snow research from operational and science perspectives. More than 80 snow scientists and hydrologists attended this meeting. My presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. </span> 
+<span style="font-size: 18px !important; color: #07153D;">I presented my Sierra Nevada snowpack work at the <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sepember, 2020! I also served as a moderator of the Prairie snow group for the breakout discussion. It was great time to hear and discuss various opinions and thoughts about the gaps/opportunities for prairie snow research from operational and science perspectives. More than 80 snow scientists and hydrologists attended this meeting. My presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. 
 
-If you want to hear my blizzard talk, please see the video below. 
-<iframe width="600" height="337" src="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+If you want to hear my blizzard talk, watch the video <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4">here</a>. </span> 
 
 <span style="font-size: 15px !important; color: #BD0026;">June 2020 </span>
 
