--- a/news/2020.md
+++ b/news/2020.md
@@ -3,6 +3,12 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Sep 2022 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">I presented my work regarding the SnowPEx+ project at the <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow</a> at Davos, Swichland on 16th October! The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
+<img src="/img/202209_present" width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">May 2021 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs gave an invited talk about my recent work at <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a>! The NH Climate Summit took place on May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners. Check out the <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>full slide</b></a>, and see the recorded <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/"><b>video</b></a> from Day2 2:28:28. </span>
