--- a/news/2020.md
+++ b/news/2020.md
@@ -3,9 +3,15 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Oct 2022 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">The 2023 NASA SnowEx October campaign took place in the tundra and boreal forest regions of Alaska from <a href="https://snow.nasa.gov/campaigns/snowex/2023/overview">International Symposium on Snow</a>! The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
+<img src="/img/202209_present." width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2022 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">I presented my work regarding the SnowPEx+ project at the <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow</a> at Davos, Swichland on 16th October! The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
+<span style="font-size: 18px !important; color: #07153D;">At <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow 2022</a>, I presented my poster of the SnowPEx+ project working with ECCC colleagues on 25-30 September! It was great time to meet many friends and colleagues in-person in the beautiful town. The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
 <img src="/img/202209_present" width="600" align="center" hspace="20" />
 <br>
 
