--- a/news/2020.md
+++ b/news/2020.md
@@ -6,8 +6,9 @@ subtitle: What is happening?
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2022 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">The <a href="https://snow.nasa.gov/campaigns/snowex/2023/overview">2023 NASA SnowEx October campaign</a> took place in the tundra and boreal forest regions of Alaska from 19 - 29 October! It was such an collaborative campaign with amazing students, postdocs, local researchers, and colleagues. Thanks all! </span> 
+<img src="/img/202210_snowex_cho.jpg." width="600" align="center" hspace="20" />
 <img src="/img/202210_snowex.jpg." width="600" align="center" hspace="20" />
-<span style="font-size: 13px !important; color: #07153D;"><i>Photo credit: Alicia Pouw </i></span>
+<span style="font-size: 13px !important; color: #07153D;"><i>Group photo credit: Alicia Pouw </i></span>
 
 <br>
 
