--- a/news/2020.md
+++ b/news/2020.md
@@ -14,7 +14,7 @@ subtitle: What is happening?
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2022 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">At <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow 2022</a>, I presented my poster of the SnowPEx+ project working with ECCC colleagues on 25-30 September! It was great time to meet many friends and colleagues in-person in the beautiful town. The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
+<span style="font-size: 18px !important; color: #07153D;">At <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow 2022</a>, I presented my research regarding <a href="https://earth.esa.int/eogateway/activities/snowpex">SnowPEx+</a> project working with ECCC colleagues on 25-30 September! It was great time to meet many friends and colleagues in-person in the beautiful town. The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
 <img src="/img/202209_present.jpg" width="600" align="center" hspace="20" />
 <br>
 
