--- a/news/2020.md
+++ b/news/2020.md
@@ -4,22 +4,23 @@ title: News
 subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2022 </span>
-
 <span style="font-size: 18px !important; color: #07153D;">The <a href="https://snow.nasa.gov/campaigns/snowex/2023/overview">2023 NASA SnowEx October campaign</a> took place in the tundra and boreal forest regions of Alaska from 19 - 29 October! It was such an collaborative campaign with amazing students, postdocs, local researchers, and colleagues. Thanks all! </span> 
 <img src="/img/202210_snowex_cho.jpg." width="600" align="center" hspace="20" />
 <img src="/img/202210_snowex.jpg." width="600" align="center" hspace="20" />
 <span style="font-size: 13px !important; color: #07153D;"><i>Group photo credit: Alicia Pouw </i></span>
-
 <br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2022 </span>
-
 <span style="font-size: 18px !important; color: #07153D;">At <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow 2022</a>, I presented my research regarding <a href="https://earth.esa.int/eogateway/activities/snowpex">SnowPEx+</a> project working with ECCC colleagues on 25-30 September! It was great time to meet many friends and colleagues in-person in the beautiful town. The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
 <img src="/img/202209_present.jpg" width="600" align="center" hspace="20" />
 <br>
 
-<span style="font-size: 15px !important; color: #BD0026;">May 2021 </span>
+<span style="font-size: 15px !important; color: #BD0026;">Jul 2022 </span>
+<span style="font-size: 18px !important; color: #07153D;"> My UNH EOS Alumni Spotlight was just posted on the UNH website. Thank you Holly, EOS Digital Design & Communications Specialist, for highlighting my story. Check it out <a href="https://eos.unh.edu/spotlight/eunsang-cho">here</a></span> 
+<img src="/img/EOS interview.JPG" width="600" align="center" hspace="20" />
+<br>
 
+<span style="font-size: 15px !important; color: #BD0026;">May 2021 </span>
 <span style="font-size: 18px !important; color: #07153D;">Dr. Jacobs gave an invited talk about my recent work at <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/">2021 Coastal New Hampshire Climate Summit</a>! The NH Climate Summit took place on May 26-27. Over 130 participants attended the Summit, including municipal staff and volunteers from across the coastal NH watershed, technical assistance providers, state and federal agency staff, researchers, and other interested community members and partners. Check out the <a href="https://www.nhcaw.org/wp-content/uploads/2021/06/Jacobs-Climate-Summit-052721.pdf"><b>full slide</b></a>, and see the recorded <a href="https://www.nhcaw.org/2021-nh-coastal-climate-summit/"><b>video</b></a> from Day2 2:28:28. </span>
 
 <img src="/img/ClimateSummit_Jacobs.JPG" width="600" align="center" hspace="20" />
