--- a/news/2020.md
+++ b/news/2020.md
@@ -4,19 +4,23 @@ title: News
 subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2022 </span>
+
 <span style="font-size: 18px !important; color: #07153D;">The <a href="https://snow.nasa.gov/campaigns/snowex/2023/overview">2023 NASA SnowEx October campaign</a> took place in the tundra and boreal forest regions of Alaska from 19 - 29 October! It was such an collaborative campaign with amazing students, postdocs, local researchers, and colleagues. Thanks all! </span> 
 <img src="/img/202210_snowex_cho.JPG" width="600" align="center" hspace="20" />
 <img src="/img/202210_snowex.JPG" width="600" align="center" hspace="20" />
+
 <span style="font-size: 13px !important; color: #07153D;"><i>Group photo credit: Alicia Pouw </i></span>
 <br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2022 </span>
+
 <span style="font-size: 18px !important; color: #07153D;">At <a href="https://www.slf.ch/en/about-the-slf/events-and-courses/international-symposium-on-snow-2022/">International Symposium on Snow 2022</a>, I presented my research regarding <a href="https://earth.esa.int/eogateway/activities/snowpex">SnowPEx+</a> project working with ECCC colleagues on 25-30 September! It was great time to meet many friends and colleagues in-person in the beautiful town. The International Glaciological Society and the WSL Institute for Snow and Avalanche Research SLF jointly organized this symposium. The symposium held at the Davos Congress Centre, Davos, Switzerland on 25-30 September 2022. </span> 
 <img src="/img/202209_present.JPG" width="600" align="center" hspace="20" />
 <br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Jul 2022 </span>
-<span style="font-size: 18px !important; color: #07153D;"> My UNH EOS Alumni Spotlight was just posted on the UNH website. Thank you Holly, EOS Digital Design & Communications Specialist, for highlighting my story. Check it out <a href="https://eos.unh.edu/spotlight/eunsang-cho">here</a></span> 
+
+<span style="font-size: 18px !important; color: #07153D;"> My UNH EOS Alumni Spotlight was just posted on the UNH website. Thank you Holly, EOS Digital Design & Communications Specialist, for highlighting my story. Check it out <a href="https://eos.unh.edu/spotlight/eunsang-cho">here</a>.</span> 
 <img src="/img/EOS interview.JPG" width="600" align="center" hspace="20" />
 <br>
 
